--- a/homepage.html
+++ b/homepage.html
@@ -8,8 +8,7 @@
 <body>
    <h1>Welcome to IEkart's Online Shopping</h1> 
    <p>
-    "IEKart's"is an online shopping website that sells goods in retail.
-    This company deals with various categories like Electronics,Clothing,Accesiories etc.
+    In this we all have all categories like Electronics,Accessories,clothing....etc;
     </p>
     </body>
     </html>
