--- a/homepage.html
+++ b/homepage.html
@@ -7,8 +7,7 @@
 </head>
 <body>
    <h1>Welcome to IEkart's Online Shopping</h1> 
-   <p>
-    In this we all have all categories like Electronics,Accessories,clothing....etc;
+   <p></p>In this we all have all categories like Electronics,Accessories,clothing....etc;
     </p>
     </body>
     </html>
