--- a/About Us.html
+++ b/About Us.html
@@ -2,24 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content=IEkarts  Online shopping, initial-scale=1.0">
+    <meta name="viewport" content=IEkarts  Online shopping website that sells goods in retail.
+    This company deals with various categories like Electronics,Clothing,Accesiories etc initial-scale=1.0">
     <title>IEkart's online shopping</title>
 </head>
 <body>
+    <nav>About us | TEAM</nav>
    <h1>Welcome to IEkart's Online Shopping</h1> 
-   <p>
-    "IEKart's"is an online shopping website that sells goods in retail.
-    This company deals with various categories like Electronics,Clothing,Accesiories etc.</p>
-    <h2>"About us">About us</h2>
+   <nav>Electronics | Clothing | Accessories | Electronic Gadgets | Offer zone</nav>
+   <article>
+    <h2>About us</h2>
+    <p>IEKARTS shopping is a website, Shoptime is an indengenous e-commerce 
+        website discovering new ways to satisfy customer need's</p>
+        <h3><span style="color:blue;font-weight:bold;">
+        <i>FOUNDERS & MANAGEMENT OF IEKART's</i>
+    </span>
+</h3>
+   </article>
     <h3>Our Team</h3>
-    <li>Tangirala Bhavani-CEO</li>
-    <LI>Harika-Manager</LI>
-    <li>Dolly-Sales Girl</li>
-    <LI>RAmya sri Rayala-Financial director</LI>
-    <LI>Josna-Sales Manager</LI>
-    <li>Dhana-Best delivery girl </li>
-    <li>Devi-Best employee</li>
+    <ul>
+    <li>Tangirala Bhavani-Founder and CEO</li>
+    <li>Dolly-Art designer</li>
+    <li>Devi-Cheif Officer</li>
+    <li>Mani-Marketing director</li>
+    <li>Manjari-Manager</li>
+    </ul>
+    <h4>OUR MISSION</h4>
+    <ul>
+        <li>Providing the high quality products for comfortable rate.</li>
+        <li>Learn more about services from IEKART's shopping.</li>
+        <li>Learn more about hoe IEKARTS shopping is helping clients look ahead.</li>
+        <li>Continously improve our team works.</li>
+    </ul>
+<footer>
+    <nav>About us | Privacy Policy | Contact US | FAQ | Terms & Conditions | Team</nav>
+</footer>
     </body>
     </html>
+
+    
 
     
