--- a/links.html
+++ b/links.html
@@ -2,21 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content=IEkarts  Online shopping, initial-scale=1.0">
+    <meta name="viewport" content=IEkarts Online shopping, initial-scale=1.0">
     <title>IEkart's online shopping</title>
 </head>
 <body>
-   <h1>Welcome to IEkart's Online Shopping</h1> 
+   <h1>IEkart's Online Shopping</h1> 
    <p>
     "IEKart's"is an online shopping website that sells goods in retail.
     This company deals with various categories like Electronics,Clothing,Accesiories etc.</p>
    
    <ul>
-    <li><a href="login.html">login</a></li>
-    <li> <a href="signup.html">signup</a></li>
-    <li><a href="trackorder.html">trackorder</a></li>
-    <li><a href="categories.html">categories</a></li>
-    <li><a href="About us.html">aboutus</a></li>
+    <li><a href="homepage.html">Homepage</a></li>
+    <li><a href="login.html">Login</a></li>
+    <li> <a href="signup.html">Signup</a></li>
+    <li><a href="trackorder.html">Trackorder</a></li>
+    <li><a href="sections.html">Categories</a></li>
+    <li><a href="AboutUs.html">AboutUS</a></li>
     </ul>
-    </body>
+    <h2>About US</h2>
+    <p>IEKart's is best online shopping</p>
+    <h3>Categories</h3>
+    <ul>
+        <li><a href="#electronics">Electronics</a></li>
+        <li><a href="#clothing">Clothing</a></li>
+        <li><a href="#accessories">Accessories</a></li>
+    </ul>
+<h2 id="electronics">Electronics</h2>
+<p>You can select an excellent one from a wide range of options from electronic store in IEKARTS </p>
+<h2 id="clothing">Clothing</h2>
+<p>Shopping malls usually feature many clothing stores so whether you like following the latest 
+    fashion trends (or) simply want to buy new clothes for younger children, your local mall should be your destination</p>
+    <h2 id="accessories">Accessories</h2>
+    <p>Accessories that are worn may include jackets, boots,and shoes,carvats,ties,hats,bannets,belts, and suspeners,
+        muffs,watches,rings...etc;</p>
+</body>
     </html>
