--- a/login.html
+++ b/login.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="IEkARTS is an online shopping website that sells good in retail", initial-scale=1.0">
+    <title>IEKART's</title>
 </head>
 <body>
-    
+    <form>
+        <fieldset>
+            <legend align="center">Login form</legend>     
+            <label>username</label><br>
+            <input type="text" placeholder="Enter your name:"required><br>
+            <label>pwd</label><br>
+            <input type="pwd" placeholder="Enter password" required><br><br>
+            <input type="submit" value="login">        
+        
+        </fieldset>
+    </form>
 </body>
 </html>
